coverage fail below 80

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -206,11 +206,12 @@ exclude_also = [
 ]
 show_missing = true
 skip_covered = true
-fail_under = 100
+fail_under = 80
 omit = ["subliminal/cli.py"]
 
 [tool.coverage.run]
 source = ["subliminal"]
+relative_files = true
 
 
 # https://mypy.readthedocs.io/en/stable/config_file.html
