add readthedocs.yaml to MANIFEST

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include CONTRIBUTING.md
 include Dockerfile
 include .dockerignore
 include .pre-commit-config.yaml
+include .readthedocs.yaml
 include tox.ini
 
 graft docs
