fix sphinx linkcheck

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ docs = [
     "sphinx",
     "sphinx_rtd_theme",
     "sphinxcontrib-programoutput",
+    "sphinx_autodoc_typehints",
     "towncrier",
 ]
 test = [
