--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,11 +66,13 @@ test = [
     "pytest>=6.0",
     "pytest-cov",
     "pytest-flakes",
+    "pytest-xdist",
     "sympy",
     "vcrpy>=1.6.1",
     "importlib_metadata>=4.6; python_version<'3.10'",
 ]
 dev = [
+    "pre-commit",
     "doc8",
     "mypy",
     "ruff",
