--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,57 @@
 [tox]
-envlist = {py38,py39,py310,py311,py312}-{native,lxml}
+min_version = 4
+env_list =
+    pre-commit,
+    py3{9,10,11,12}-tests,
+    changelog,
+    pre-commit,
+    docs,
+    docs-linkcheck,
+
+[testenv:.pkg]
+pass_env = SETUPTOOLS_SCM_PRETEND_VERSION
 
 [testenv]
-deps =
-    lxml: lxml
-commands = pytest
+package = wheel
+wheel_build_env = .pkg
+extras =
+    tests: test
+    coverage: test
+    mypy: test
+commands =
+    tests: pytest {posargs:-n auto}
+    coverage: pytest --cov --cov-report term {posargs:-n auto}
+    mypy: mypy --install-types --non-interactive subliminal tests
+
+
+[testenv:pre-commit]
+description =
+    run pre-commit-defined linters under `{basepython}`
+skip_install = True
+basepython = python3
+deps = pre-commit>=2.9.3
+commands = pre-commit run --all-files --show-diff-on-failure {posargs:}
+setenv =
+    # pre-commit and tools it launches are not clean of this warning.
+    PYTHONWARNDEFAULTENCODING=
+
+
+[testenv:docs]
+# Keep base_python in-sync with check.yaml/docs and .readthedocs.yaml.
+base_python = py312
+extras = docs
+commands =
+    sphinx-build -n -T -W --keep-going -b html -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -n -T -W --keep-going -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+
+[testenv:docs-linkcheck]
+package = editable
+base_python = {[testenv:docs]base_python}
+extras = {[testenv:docs]extras}
+commands = sphinx-build -W --keep-going -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/html
+
+[testenv:changelog]
+extras = docs
+allowlist_externals = towncrier
+skip_install = true
+commands = towncrier build --version main --draft
