fix running tests with tox

--- a/tox.ini
+++ b/tox.ini
@@ -2,32 +2,43 @@
 min_version = 4
 env_list =
     pre-commit,
-    py3{9,10,11,12}-tests,
-    changelog,
-    pre-commit,
+    mypy,
+    py3{9,12}-tests,
+    coverage,
     docs,
-    docs-linkcheck,
+    changelog,
+
 
 [testenv:.pkg]
 pass_env = SETUPTOOLS_SCM_PRETEND_VERSION
 
+
 [testenv]
 package = wheel
 wheel_build_env = .pkg
-extras =
-    tests: test
-    coverage: test
-    mypy: test
-commands =
-    tests: pytest {posargs:-n auto}
-    coverage: pytest --cov --cov-report term {posargs:-n auto}
-    mypy: mypy --install-types --non-interactive subliminal tests
+extras = test
+
+
+[testenv:tests]
+commands = pytest {posargs:-n auto}
+
+
+[testenv:mypy]
+commands = mypy --install-types --non-interactive {posargs:subliminal tests}
+
+
+[testenv:coverage]
+usedevelop = true
+deps = coverage[toml]>=7
+set_env =
+    COVERAGE_PROCESS_START = pyproject.toml
+commands = pytest --cov --cov-report=term-missing:skip-covered {posargs:-n auto}
 
 
 [testenv:pre-commit]
 description =
     run pre-commit-defined linters under `{basepython}`
-skip_install = True
+skip_install = true
 basepython = python3
 deps = pre-commit>=2.9.3
 commands = pre-commit run --all-files --show-diff-on-failure {posargs:}
@@ -37,18 +48,17 @@ setenv =
 
 
 [testenv:docs]
+package = wheel
+wheel_build_env = .pkg
 # Keep base_python in-sync with check.yaml/docs and .readthedocs.yaml.
 base_python = py312
 extras = docs
+allowlist_externals = sphinx-build
 commands =
     sphinx-build -n -T -W --keep-going -b html -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -n -T -W --keep-going -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -n -T -W --keep-going -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/html
 
-[testenv:docs-linkcheck]
-package = editable
-base_python = {[testenv:docs]base_python}
-extras = {[testenv:docs]extras}
-commands = sphinx-build -W --keep-going -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/html
 
 [testenv:changelog]
 extras = docs
