add tox command

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,16 @@ set_env =
     COVERAGE_PROCESS_START = pyproject.toml
 commands = pytest --cov --cov-report=term-missing:skip-covered {posargs:-n auto}
 
+[testenv:coverage-core]
+usedevelop = true
+deps = coverage[toml]>=7
+set_env =
+    COVERAGE_PROCESS_START = pyproject.toml
+commands =
+    pytest --ignore=tests/refiners --ignore=tests/providers --cov --cov-report= --cov-fail-under=0 {posargs:-n auto}
+    coverage report \
+        --omit='subliminal/cli.py,subliminal/converters/*,subliminal/providers/*,subliminal/refiners/*' \
+        --skip-covered --fail-under=100
 
 [testenv:pre-commit]
 description =
