feat: Support BSPlayer Subtitles

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ subliminal = "subliminal.cli:subliminal"
 
 [project.entry-points."subliminal.providers"]
 addic7ed = "subliminal.providers.addic7ed:Addic7edProvider"
+bsplayer = "subliminal.providers.bsplayer:BSPlayerProvider"
 gestdown = "subliminal.providers.gestdown:GestdownProvider"
 napiprojekt = "subliminal.providers.napiprojekt:NapiProjektProvider"
 opensubtitles = "subliminal.providers.opensubtitles:OpenSubtitlesProvider"
