--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,6 @@ env_list =
     docs,
     changelog,
 
-
 [testenv:.pkg]
 pass_env = SETUPTOOLS_SCM_PRETEND_VERSION
 
@@ -17,10 +16,24 @@ pass_env = SETUPTOOLS_SCM_PRETEND_VERSION
 package = wheel
 wheel_build_env = .pkg
 extras = test
+pass_env =
+    COVERAGE_FILE
+allowlist_externals =
+    echo
+    false
+# This and the next few testenvs are a workaround for
+# https://github.com/tox-dev/tox/issues/2858.
+commands =
+    echo "Unrecognized environment name {envname}"
+    false
 
 
 [testenv:tests]
 commands = pytest {posargs:-n auto}
+
+
+[testenv:py3{,.}{8,9,10,11,12}-tests]
+commands = {[testenv:tests]commands}
 
 
 [testenv:mypy]
@@ -32,7 +45,14 @@ usedevelop = true
 deps = coverage[toml]>=7
 set_env =
     COVERAGE_PROCESS_START = pyproject.toml
-commands = pytest --cov --cov-report=term-missing:skip-covered {posargs:-n auto}
+commands =
+    python -m pytest --cov=subliminal --cov-report= --cov-fail-under=0 {posargs:-n auto}
+    coverage report --skip-covered --show-missing --fail-under=80
+
+
+[testenv:py3{,.}{8,9,10,11,12}-coverage]
+commands = {[testenv:coverage]commands}
+
 
 [testenv:coverage-core]
 usedevelop = true
@@ -40,10 +60,18 @@ deps = coverage[toml]>=7
 set_env =
     COVERAGE_PROCESS_START = pyproject.toml
 commands =
-    pytest --ignore=tests/refiners --ignore=tests/providers --cov --cov-report= --cov-fail-under=0 {posargs:-n auto}
+    python -m pytest \
+        --ignore=tests/refiners --ignore=tests/providers \
+        --cov=subliminal --cov-report= --cov-fail-under=0 \
+        {posargs:-n auto}
     coverage report \
         --omit='subliminal/cli.py,subliminal/converters/*,subliminal/providers/*,subliminal/refiners/*' \
-        --skip-covered --fail-under=100
+        --skip-covered --show-missing --fail-under=100
+
+
+[testenv:py3{,.}{8,9,10,11,12}-coverage-core]
+commands = {[testenv:coverage-core]commands}
+
 
 [testenv:pre-commit]
 description =
@@ -58,8 +86,6 @@ setenv =
 
 
 [testenv:docs]
-package = wheel
-wheel_build_env = .pkg
 # Keep base_python in-sync with check.yaml/docs and .readthedocs.yaml.
 base_python = py312
 extras = docs
@@ -73,5 +99,4 @@ commands =
 [testenv:changelog]
 extras = docs
 allowlist_externals = towncrier
-skip_install = true
 commands = towncrier build --version main --draft
