--- a/tox.ini
+++ b/tox.ini
@@ -61,8 +61,7 @@ set_env =
     COVERAGE_PROCESS_START = pyproject.toml
 commands =
     python -m pytest \
-        --ignore=tests/refiners --ignore=tests/providers \
-        --cov=subliminal --cov-report= --cov-fail-under=0 \
+        -m core --cov=subliminal --cov-report= --cov-fail-under=0 \
         {posargs:-n auto}
     coverage report \
         --omit='subliminal/cli.py,subliminal/converters/*,subliminal/providers/*,subliminal/refiners/*' \
