--- a/hatch.toml
+++ b/hatch.toml
@@ -11,6 +11,10 @@ features = [
 ]
 
 # ---------------------------------------------------------
+[envs.hatch-test]
+features = ["tests"]
+
+# ---------------------------------------------------------
 [envs.pkg]
 description = "package information"
 features = [
