--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
+    "attrs>=22.2",
     "babelfish>=0.6.1",
     "beautifulsoup4>=4.4.0",
     "defusedxml>=0.7.1",
@@ -70,6 +71,8 @@ tests = [
     "pytest>=6.0",
     "pytest-cov",
     "pytest-xdist",
+    "cattrs",
+    "packaging",
     "sympy",
     "colorama",  # used in scripts/
     "vcrpy>=5",  # keep synchronized with docs dependencies
