Use multiple tags to work well with config file options.

--- a/docs/config.toml
+++ b/docs/config.toml
@@ -22,6 +22,7 @@ provider = ["addic7ed", "opensubtitlescom", "opensubtitles"]
 refiner = ["metadata", "hash", "omdb"]
 ignore_refiner = ["tmdb"]
 language = ["fr", "en", "pt-br"]
+foreign_only = false
 encoding = "utf-8"
 min_score = 50
 archives = true
