--- a/.github/workflows/scheduled-tests.yaml
+++ b/.github/workflows/scheduled-tests.yaml
@@ -1,8 +1,9 @@
-name: Test-APIs
+name: Scheduled Tests
 
 on:
   schedule:
     - cron: "12 12 12 * *" # run once a month on the 12th at 12:12
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -10,8 +11,10 @@ concurrency:
 
 jobs:
   test-api:
-    name: Test APIs
-    if: github.repository == 'Diaoul/subliminal' && github.event_name == 'schedule'
+    name: Run tests with deleted requests cassettes
+    if: |
+      (github.repository == 'Diaoul/subliminal' && github.event_name == 'schedule')
+      || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
