make docs set python version 3.12

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,6 +6,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
+    # Keep in sync with CI.yaml/docs, hatch.toml and tox/docs.
     python: "3.12"
 
 python:
