--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          # Keep in sync with tox/docs and .readthedocs.yaml.
+          # Keep in sync with tox/docs, hatch.toml and .readthedocs.yaml.
           python-version: "3.12"
           cache: pip
 
