--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -45,10 +45,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: .python-version-default
-      - name: Install tox-uv
-        run: python -Im pip install tox-uv
+      - name: Install hatch
+        run: python -Im pip install hatch
       - name: type-check
-        run: python -Im tox run -e mypy
+        run: hatch run types:run
 
   docs:
     name: Build docs and run doctests
@@ -62,11 +62,15 @@ jobs:
           # Keep in sync with tox/docs, hatch.toml and .readthedocs.yaml.
           python-version: "3.12"
           cache: pip
-
-      - name: Install tox-uv
-        run: python -Im pip install tox-uv
-      - name: Build docs
-        run: python -Im tox run -e docs,changelog
+      - name: Install hatch
+        run: python -Im pip install hatch
+      - name: Build and check docs
+        run: hatch run docs:run
+      - name: Run doctests
+        if: false  # disabled
+        run: hatch run docs:doctest
+      - name: Check changelog
+        run: hatch run changelog:run
 
       - uses: actions/upload-artifact@v4
         with:
@@ -118,27 +122,46 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         # Created by the build-and-inspect-python-package action above.
-        python-version: ${{ fromJson(needs.build-package.outputs.supported-python-versions) }}
+        py: ${{ fromJson(needs.build-package.outputs.supported-python-versions) }}
     steps:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.py }}
           cache: 'pip'
           allow-prereleases: true
-      - name: Install tox-uv
-        run: python -Im pip install tox-uv
+      - name: Install hatch
+        run: python -Im pip install hatch
 
-      - name: Run tests
+      - name: Pick environment to run
+        run: |
+          import codecs; import os
+          py = "${{ matrix.py }}"
+          py = f"tests.py{py}"
+          print(f"Picked {py}")
+          with codecs.open(os.environ["GITHUB_ENV"], mode="a", encoding="utf-8") as file_handler:
+              file_handler.write(f"FORCE_COLOR=1\nENV={py}\n")
+        shell: python
+      - name: Setup test environment
+        run: |
+          hatch -v env create ${ENV}
+        shell: bash
+      - name: Run test suite
+        run: hatch -v run ${ENV}:test-cov
         env:
-          # Make sure to add `passenv=COVERAGE_FILE` to `[testenv]` in tox.ini
-          COVERAGE_FILE: ".coverage.${{ matrix.os }}.${{ matrix.python-version }}"
-        run: >-
-          uvx --with=tox-uv
-          tox run
-          -e py${{ matrix.python-version }}-coverage
+          CI_RUN: "yes"
+        shell: bash
+      - name: Rename coverage report file
+        # Follow https://github.com/tox-dev/platformdirs
+        run: |
+          import os;
+          os.rename(
+            f"report{os.sep}.coverage.${{ matrix.py }}",
+            f"report{os.sep}.coverage.${{ matrix.os }}-${{ matrix.py }}",
+          )
+        shell: python
 
       - name: Store coverage file
         uses: actions/upload-artifact@v4
