fix _version path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,7 +119,7 @@ tvsubtitles = "subliminal.converters.tvsubtitles:TVsubtitlesConverter"
 source = "vcs"
 
 [tool.hatch.build.hooks.vcs]
-version-file = "_version.py"
+version-file = "src/subliminal/_version.py"
 
 
 # https://docs.pytest.org/en/6.2.x/customize.html
