--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - run: pipx run check-manifest
+      - run: pipx run check-manifest --ignore "_version.py"
 
   pre-commit:
     runs-on: ubuntu-latest
